# viyugam

./: .gitignore  README.md  dev.py  install.sh  pyproject.toml
backend/: .env.example  .token  pyproject.toml  test_gemini.py
backend/app/: cli.py  main.py
backend/app/agents/: boardroom.py  chairman.py  flow_coach.py
backend/app/api/v1/endpoints/: agents.py  domains.py  finance.py  ops.py  projects.py  tasks.py
backend/app/core/: auth.py  config.py  database.py  watcher.py
backend/app/middleware/: privacy.py
backend/app/models/: domain.py  finance.py  inbox.py  project.py  task.py  user.py
backend/app/services/: finance.py  gemini.py
cli/: uninstall.sh
cli/viyugam/: pii.py
cli/viyugam/agents/: coach.py  reviewer.py
docs/: 00_prd .md  04_api_contracts.md  07a_feature_spec.md  08_roadmap.md
homeflow/: index.html  package-lock.json  package.json  tailwind.config.js  test-lucide.js
homeflow/src/: App.tsx  data.ts  index.css  types.ts
homeflow/src/components/: FlowCoach.tsx  Layout.tsx  (+1 more)
implementation_notes/: phase_1_foundation.md  phase_2.5_ui_assimilation.md  phase_2_pwa.md
prd/: 01_tech_stack.md  02_directory_structure.md  03_data_schema.md  05_design_system.md  06_sitemap.md  07b_feature_spec.md  09_uat.md  10_system_consultation.md
taskflow/: prompt.txt
tests/: conftest.py  test_coherence.py  test_finance.py  test_finance_v2.py  test_models.py  test_pii.py  test_storage.py  test_v0_3_to_0_6.py
viyugam/: dashboard.py  main.py  models.py  repl.py  storage.py
viyugam/agents/: boardroom.py  chairman.py  coach.py  energy.py  finance.py  intent.py  researcher.py  reviewer.py
workwifeai/: Dockerfile  docker-compose.yml
workwifeai/components/: TaskInput.tsx  TaskList.tsx
(+5 files in other folders)
