[project]
name = "viyugam"
version = "0.1.0"
description = "A personal Life OS — text-only, Claude-powered"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
viyugam = "viyugam.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["viyugam"]
